--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                             'https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext'
                             ],
                             microDeposits: 'false',
-                            fallbackToMicroDeposits: (fallbackToMicroDeposits.value === 'false')
                         }, function(err, res) {
-                    window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err) + ' -- Response: ' + JSON.stringify(res));
+                    console.log('Error: ' + JSON.stringify(err) + ' -- Response: ' + JSON.stringify(res));
+                    //window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err) + ' -- Response: ' + JSON.stringify(res));
             });
         });
         </script>
