--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <script type="text/javascript">
         dwolla.configure("sandbox");
         document.getElementById("start").addEventListener("click", function(e){
-            window.postMessage("Webview Console Log",window.dwollaToken)
-                var iavToken = 'Oygt2BaCAM3rhOoIA2snCyctPjP9Th8JNdLtVnzh9sPD99P2xU';
+            window.ReactNativeWebView.postMessage("Webview Console Log",window.dwollaToken)
+                var iavToken = 'F8Y2m6ooij7doJCAF4dvBX5bjhwSJdG81Xp6eVkZhFfVjfhd2z';
                     dwolla.configure('sandbox');
                     dwolla.iav.start(iavToken, {
                             container: 'iavContainer',
