--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             ],
                             microDeposits: 'false',
                         }, function(err, res) {
-                    console.log('Error: ' + JSON.stringify(err) + ' -- Response: ' + JSON.stringify(res));
+                    window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err) + ' -- Response: ' + JSON.stringify(res));
                     //window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err) + ' -- Response: ' + JSON.stringify(res));
             });
         });
