testing success response

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         dwolla.configure("sandbox");
         document.getElementById("start").addEventListener("click", function(e){
             //window.ReactNativeWebView.postMessage(window.dwollaToken)
-                var iavToken = window.dwollaToken;
+                var iavToken = "VeTYKUQ7azuIDQJWclmcdvxeIK4bJFSRVkqVipCFaeYCmiz4qJ";
                     dwolla.configure('sandbox');
                     dwolla.iav.start(iavToken, {
                             container: 'iavContainer',
