--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         dwolla.configure("sandbox");
         document.getElementById("start").addEventListener("click", function(e){
             //window.ReactNativeWebView.postMessage(window.dwollaToken)
-                var iavToken = "VeTYKUQ7azuIDQJWclmcdvxeIK4bJFSRVkqVipCFaeYCmiz4qJ";
+                var iavToken = "wafq9NqiluTA7zdmPIWdDHUTvrKnbZq4n6He7qRPgVgPctfgTU";
                     dwolla.configure('sandbox');
                     dwolla.iav.start(iavToken, {
                             container: 'iavContainer',
@@ -27,7 +27,7 @@
                             microDeposits: 'false',
                         }, function(err, res) {
                     console.log('Error: ' + JSON.stringify(err) + 'Response:' + JSON.stringify(res));
-                    window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err) + 'Response:' + JSON.stringify(res._links.funding-source.href));
+                    window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err) + 'Response:' + JSON.stringify(res));
             });
         });
         </script>
