--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         dwolla.configure("sandbox");
         document.getElementById("start").addEventListener("click", function(e){
             //window.ReactNativeWebView.postMessage(window.dwollaToken)
-                var iavToken = "4n9ltHXoSUIYKzCgyBUPjdi7HRh8Mm2hpJf5Enp62FMjBBfv3p";
+                var iavToken = "ieHeUeT1LAP3SzMQQhWfcVt7xcDAM6dL0w2sMYEvvJSAbwYzSF";
                     dwolla.configure('sandbox');
                     dwolla.iav.start(iavToken, {
                             container: 'iavContainer',
@@ -30,7 +30,7 @@
                     if(err){
                         window.ReactNativeWebView.postMessage('Error: ' + JSON.stringify(err))
                     }else{
-                        window.ReactNativeWebView.postMessage(JSON.stringify(res))
+                        window.ReactNativeWebView.postMessage("response:" +JSON.stringify(res))
                     }
             });
         });
